hygiene and documentation, adding a few more test fixes